feat: update local tdb related classes for TDB1 compatibility